# libclnoise

./: .gitignore  CMakeLists.txt  README.md  libclnoise.kdev4  libnoisecl.kdev4
headers/clnoise/: attribute.h  basemodule.h  error.h  filter.h  function.h  generator.h  gradientattribute.h  library.h  modifier.h  module.h  moduleattribute.h  noise.h  noisemap.h  output.h
src/: CMakeLists.txt  attribute.cpp  attribute.h  basemodule.cpp  basemodule.h  clnoise.cpp  clnoise.h  clnoisebasemodule.cpp  clnoisebasemodule.h  clnoiseerror.h  clnoisefunction.cpp  clnoisefunction.h  clnoiselibrary.cpp  clnoiselibrary.h  clnoisemap.cpp  clnoisemap.h  clnoisemodifier.cpp  clnoisemodifier.h  clnoisemodule.cpp  clnoisemodule.h  clnoisemoduleattribute.h  clnoiseoutput.cpp  clnoiseoutput.h  filter.cpp  filter.h  function.cpp  function.h  generator.cpp  generator.h  gradientattribute.cpp  gradientattribute.h  library.cpp  library.h  modifier.cpp  module.cpp  noise.cpp  noisecl.cpp  noisecl.h  noiseclerror.h  noisemap.cpp  (+8 more)
src/modules/: Billow.cl  Checkerboard.cl  Const.cl  Cylinders.cl  GradientCoherentNoise3D.cl  GradientNoise3D.cl  MakeInt32Range.cl  Perlin.cl  PlaneMap.cl  RidgedMulti.cl  SCurve5.cl  Voronoi.cl  builtin.cl  cl2h.sh  gradient.cl  grayscale.cl  turbulence.cl
tests/: CMakeLists.txt  clnoise_allgen_test.cpp  clnoise_test.cpp  noisecl_test.cpp  speed_benchmark.cpp  testkernel.cl  timer.h
